--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,10 +20,16 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile 'com.android.support:appcompat-v7:25.3.1'
     testCompile 'junit:junit:4.12'
+    compile 'com.android.support:appcompat-v7:25.3.1'
+    //封装好的网络请求okhttp
+    compile 'org.kymjs.kjframe:kjframe:2.6'
+    //recycleview
+    compile 'com.android.support:recyclerview-v7:23.4.0'
+    //各种加载中的动画效果
+    compile 'com.github.ybq:Android-SpinKit:1.1.0'
 }
