--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,7 +26,7 @@
 
 
         <!--启动的activity-->
-        <activity android:name=".mine_code.activity.StartActivity"
+        <activity android:name=".demo.activity.StartActivity"
             android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
@@ -36,16 +36,18 @@
         </activity>
 
         <!--沉浸式-->
-        <activity android:name=".mine_code.activity.Activity_Demo1"
+        <activity android:name=".demo.activity.Activity_Demo1"
             android:screenOrientation="portrait"/>
-        <activity android:name=".mine_code.activity.Activity_Demo2"
+        <activity android:name=".demo.activity.Activity_Demo2"
             android:screenOrientation="portrait"/>
-        <activity android:name=".mine_code.activity.Activity_Demo3"
+        <activity android:name=".demo.activity.Activity_Demo3"
             android:screenOrientation="portrait"/>
-        <activity android:name=".mine_code.activity.Activity_Demo4"
+        <activity android:name=".demo.activity.Activity_Demo4"
             android:screenOrientation="portrait"/>
 
-
+        <!--数据-->
+        <activity android:name=".demo.activity.Activity_Demo5"
+            android:screenOrientation="portrait"/>
     </application>
 
 </manifest>
