--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,4 +32,7 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:23.4.0'
     //各种加载中的动画效果
     compile 'com.github.ybq:Android-SpinKit:1.1.0'
+    //为导入Tablayout而加
+    compile 'com.android.support:design:23.3.0'
+
 }
